etl-api/src/db/snapshots/etl_api__db__destinations__tests__destination_config_json_encryption-2.snap
---
source: etl-api/src/db/destinations.rs
expression: deserialized_config
---
BigQuery {
    project_id: "project-id",
    dataset_id: "dataset-id",
    service_account_key: Secret([REDACTED alloc::string::String]),
    max_staleness_mins: Some(
        99,
    ),
}
