etl-api/src/db/snapshots/etl_api__db__destinations__tests__destination_config_json_encryption.snap
---
source: etl-api/src/db/destinations.rs
expression: config_in_db
---
{
  "big_query": {
    "dataset_id": "dataset-id",
    "max_staleness_mins": 99,
    "project_id": "project-id",
    "service_account_key": "[key]"
  }
}
